@@ -1,3 +1,9 @@
+2004-04-01  Thomas Vander Stichele  <thomas at apestaart dot org>
+
+	* gst-libs/gst/gconf/gconf.c: (gst_gconf_get_string),
+	(gst_gconf_render_bin_from_key):
+          leak plugging and style fixing
+
 2004-03-31  David Schleef  <ds@schleef.org>
 
 	* gst/audioscale/gstaudioscale.c: (gst_audioscale_expand_value),
